fix spacing

--- a/popup/styles.css
+++ b/popup/styles.css
@@ -1,5 +1,5 @@
 html {
-    width: 250px;
+    width: 300px;
     height: 175px;
 }
 
@@ -60,6 +60,10 @@ button:hover {
 }
 
 button#reset {
+    margin-left: 5px;
+}
+
+button#convert-hex {
     margin-left: 5px;
 }
 
